@@ -86,6 +86,10 @@ function shiftBlocks(fieldset, previousBlock){
     <form action="manage_saveScripts" tal:attributes="action python:here.absolute_url()+'/manage_saveScripts'" method="post">
       <input type=submit i18n:attributes="value" value="Save" />
       
+        <p>Debug mode (don't merge javascripts)
+            <input type="checkbox" name="debugmode:boolean" tal:attributes="checked here/getDebugMode" />
+        </p>
+      
       <fieldset tal:repeat="script here/getScripts"><input type="hidden" name="scripts.sort:records:int" tal:attributes="value repeat/script/index" />     
         <div class="script-buttons">
         <p class="updown-buttons">
