@@ -2,6 +2,11 @@
 
 0.8 +
 =====================
+ * Added debugmode where scripts are not concatenated.
+   This will let things like the javascript console point to the right line-number.
+   And makes it easier to develop, because there is no caching of the scripts.
+   [fschulze]
+
  * Fixed cooking of stylesheets so that composite stylesheets get correct media settings.
    Thanks a lot to Denis Mishunoff[spliter] for discovery, investigation and suggested fix
    [elvix]
